--- a/src/main/resources/templates/users/my-annotations.html
+++ b/src/main/resources/templates/users/my-annotations.html
@@ -46,7 +46,7 @@
 				</div>
 			</div>
 			<div class="col-md-8">
-				<h4 id="subjectName" class="fw-bold text-center mt-2">-</h4>
+				<h4 id="subjectName" class="fw-bold text-center mt-2">---</h4>
 
 				<div class="card">
 					<div class="card-body">
@@ -54,7 +54,7 @@
 
 						<span class="text-muted">Anotações sobre:</span>
 						<div class="d-flex justify-content-between align-items-center">
-							<h4 id="topicName" class="card-title fw-bold">Anotações</h4>
+							<h5 id="topicName" class="card-title fw-bold">---</h5>
 							<a id="showTopicButton" type="button" class="btn btn-outline-danger btn-sm mb-1"
 								href="#">Acessar
 								conteúdo</a>
