--- a/src/main/resources/templates/subjects/forum-topic.html
+++ b/src/main/resources/templates/subjects/forum-topic.html
@@ -123,7 +123,7 @@
 
 				<input type="hidden" th:field="*{bodyHtml}" required></input>
 			</div>
-			<div class="d-grid gap-2 col-4 mx-auto">
+			<div class="text-center">
 				<button type="submit" class="btn btn-danger">Publique sua resposta</button>
 			</div>
 		</form>
