--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -118,7 +118,7 @@
 								<a id="messagesDropdownItem" class="dropdown-item" href="#" th:href="@{/messages}">Mensagens</a>
 								<a id="messagesDropdownItem" class="dropdown-item" href="#" th:href="@{/notifications}">Notificações</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#" th:href="@{/support}">Suporte</a>
+								<a class="dropdown-item" href="#" th:href="@{/support}">Ajuda e Suporte</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" th:href="@{/logout}">Sair</a>
 							</div>
