--- a/src/main/resources/templates/subjects/subject.html
+++ b/src/main/resources/templates/subjects/subject.html
@@ -58,9 +58,26 @@
 							class="fw-bolder text-primary border border-1 border-start-0 border-primary p-1 rounded-end"
 							th:classappend="${subject.userStats.liked} ? 'bg-white'" th:text="${subject.likes}"></span>
 					</div>
+					
+					<div class="d-flex" th:if="${not #lists.isEmpty(subject.teachers)}">
+						Professor(es): 
+						<div class="d-flex ms-2" th:each="teacher : ${subject.teachers}">
+							<th:block th:if="${teacher != currentUser}">
+								<a class="link-light" target="_blank" href="#" th:href="@{/messages(user=${teacher.email})}">
+									[[${teacher.fullName}]]
+								</a>
+							</th:block>
+							<th:block th:if="${teacher == currentUser}">
+								<span class="text-light">
+									[[${teacher.fullName}]]
+								</span>
+							</th:block>
+							<span th:text="${teacherStat.last} ? '.' : ','"></span>
+						</div>
+					</div>
 				</div>
 			</div>
-
+			
 			<div class="progress text-center" style="height: 25px;" th:with="progress=${subject.userStats.progress}">
 				<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
 					aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
