--- a/src/main/resources/templates/users/my-questions.html
+++ b/src/main/resources/templates/users/my-questions.html
@@ -44,7 +44,7 @@
 							<td class="text-center" th:text="${question.status.displayName}"></td>
 							<td class="text-center">
 								<a class="btn btn-outline-dark btn-sm" href="#" th:href="@{/questions/{id}(id=${question.id})}">
-									<i class="bi bi-search"></i>
+									<i class="bi bi-pencil"></i>
 								</a>
 							</td>
 						</tr>
