--- a/src/main/resources/templates/users/topic-edit.html
+++ b/src/main/resources/templates/users/topic-edit.html
@@ -118,11 +118,11 @@
 						</div>
 					</div>
 
-					<div class="d-grid gap-2 col-6 mx-auto mt-5">
-						<button type="submit" class="btn btn-danger form-control fw-bold mb-2">
-							Enviar tópico editado<i class="fa fa-pencil ms-3" aria-hidden="true"></i>
+					<div class="text-center mx-auto mt-5">
+						<button type="submit" class="btn btn-danger fw-bold mb-2">
+							<i class="bi bi-pencil"></i> Enviar alterações
 						</button>
-
+						<br>
 						<small class="text-muted">Ao enviar, o <strong>status</strong> do tópico mudará para <strong>Editado</strong>
 							e você não poderá editá-lo até voltar para o status Editável.
 						</small>
