--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -49,7 +49,7 @@
 									</form>		
 									<a class="btn btn-outline-dark btn-sm" href="#"
 										th:href="@{/admin/questions/{id}(id=${question.id})}">
-										<i class="bi bi-search"></i>
+										<i class="bi bi-pencil"></i>
 									</a>						
 								</div>
 							</td>
