--- a/src/main/resources/templates/admin/topics.html
+++ b/src/main/resources/templates/admin/topics.html
@@ -43,7 +43,7 @@
 						<td class="text-center">
 							<a class="btn btn-outline-dark btn-sm" href="#" 
 								th:href="@{/admin/topics/{id}(id=${topic.id})}">
-								<i class="bi bi-search"></i>
+								<i class="bi bi-pencil"></i>
 							</a>
 						</td>
 					</tr>
