--- a/src/main/resources/templates/subjects/subject.html
+++ b/src/main/resources/templates/subjects/subject.html
@@ -432,7 +432,7 @@
 								th:href="@{/subjects/{id}/forum-topics/{topicId}(id=${subject.id}, topicId=${topic.id})}">
 	
 								<div class="d-flex">
-									<div class="me-4 text-center align-self-center">
+									<div class="me-3 text-center align-self-center">
 										<div class="mb-1">
 											<small class="d-block text-muted">votos</small> <small th:text="${topic.voteCount}">1</small>
 										</div>
@@ -445,20 +445,25 @@
 										</div>
 									</div>
 									<div class="flex-fill">
-										<div class="d-flex w-100 justify-content-between">
-											<h5 class="mb-1" th:text="${topic.title}">Topic Title</h5>
-											<time class="text-muted timeago" th:datetime="${#dates.formatISO(topic.creationDate)}">3 days
-												ago</time>
+										<h6 class="mb-1" th:text="${topic.title}">Topic Title</h6>
+										<div class="forum-thread-body mb-1 truncate" th:utext="${topic.bodyHtml}">
+											Some placeholder content in a paragraph.
 										</div>
-										<div class="mb-1 truncate" th:utext="${topic.bodyHtml}">Some placeholder content in a
-											paragraph.</div>
-	
-										<div class="d-flex justify-content-between align-items-center">
-											<div class="tags align-self-center">
-												<span class="badge rounded-pill bg-dark me-2" th:each="tag : ${topic.tags}" th:text="${tag.name}"></span>
+											
+										<div class="row">
+											<div class="col-md-6 mb-2">
+												<div class="tags align-self-center">
+													<span class="badge rounded-pill bg-dark me-2" th:each="tag : ${topic.tags}" th:text="${tag.name}"></span>
+												</div>
 											</div>
-	
-											<small th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo Alves.</small>
+											<div class="col-md-6">
+												<div>
+													<small class="d-flex" th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo Alves.</small>
+													<small>
+														<time class="text-muted timeago" th:datetime="${#dates.formatISO(topic.creationDate)}">3 days ago</time>
+													</small>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -517,6 +522,10 @@
 			if (forumTopicBodyEditor.root.innerText.trim() !== '') {
 				$('#forum-topic-form #bodyHtml').val(forumTopicBodyEditor.root.innerHTML);
 			}
+		});
+		
+		$('.forum-thread-body').each(function() {
+			$(this).html($(this).text());
 		});
 		
 
