--- a/src/main/resources/templates/users/my-topics.html
+++ b/src/main/resources/templates/users/my-topics.html
@@ -46,7 +46,7 @@
 							<td class="text-center">
 								<a class="btn btn-outline-dark btn-sm" href="#"
 									th:href="@{/users/topic/{id}(id=${topic.id})}">
-									<i class="bi bi-search"></i>
+									<i class="bi bi-pencil"></i>
 								</a>
 							</td>
 						</tr>
