--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -29,14 +29,20 @@
 		$("time.timeago").timeago();
 	
 		const notifications = /*[[${notifications}]]*/null;
+		let isAllRead = true;
 		for (let i = 0; i < notifications.length; i++) {
 			if (!notifications[i].read) {
+				isAllRead = false;
 				$('#showNotificationsButton')
 					.append(`<span class="position-absolute top-0 start-100 translate-middle p-2 bg-dark border border-light rounded-circle">
 						   	 	<span class="visually-hidden">New alerts</span>
 						  	</span>`);;
 				break;
 			}
+		}
+		
+		if (isAllRead) {
+			$('#readallNotificationsButton').prop('disabled', true);			
 		}
 		
 		function connect() {
