--- a/src/main/resources/templates/subjects/test.html
+++ b/src/main/resources/templates/subjects/test.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org" th:replace="~{fragments/layout :: base('Teste', ~{::body}, _, _, _)}">
+<html xmlns:th="www.thymeleaf.org" th:replace="~{fragments/layout :: base('Teste', ~{::body}, ~{::link}, _, _)}">
 
 <head>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/alternatives.css}">
 </head>
 
 <body>
@@ -40,7 +41,7 @@
 
 					<div class="alternative mb-3" th:each="alternative : ${question.alternatives}">
 						<div class="form-check">
-							<input class="form-check-input" type="radio" th:value="${alternative.id}"
+							<input class="form-check-input me-2" type="radio" th:value="${alternative.id}"
 								th:name="${question.id}" required>
 							<label class="form-check-label">
 								<div class="alternativeEditor" th:utext="${alternative.description}"></div>
