--- a/src/main/resources/templates/users/edit-profile.html
+++ b/src/main/resources/templates/users/edit-profile.html
@@ -19,7 +19,7 @@
 					<div class="mb-3">
 						<label for="fullName" class="form-label">Nome Completo</label>
 						<input type="text" id="fullName" class="form-control" maxlength="40" th:field="*{fullName}"
-							th:classappend="${#fields.hasErrors('fullName')}? 'is-invalid'" aria-describedby="nameFeedback" min="2">
+							th:classappend="${#fields.hasErrors('fullName')}? 'is-invalid'" aria-describedby="nameFeedback">
 
 						<div id="nameFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('fullName')}"
 							th:errors="*{fullName}">Mensagem de erro</div>
@@ -33,7 +33,12 @@
 					<div class="row">
 						<div class="col-md-6 mb-3">
 							<label for="email" class="form-label">Data de Nascimento</label>
-							<input type="date" id="birthDate" class="form-control" th:field="*{birthDate}">
+							<input type="date" id="birthDate" class="form-control" th:field="*{birthDate}"
+								th:classappend="${#fields.hasErrors('birthDate')}? 'is-invalid'" aria-describedby="birthDateFeedback">
+							
+							<div id="birthDateFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('birthDate')}"
+								th:errors="*{birthDate}">Mensagem de erro
+							</div >
 						</div>
 
 						<div class="col-md-6 mb-3">
